--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -201,6 +201,11 @@
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Commentaire" id="gW6-8o-pe4">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="QK0-zV-CPu">
+                            <connections>
+                                <action selector="panLeftMenu:" destination="k3t-rL-7u1" id="6C5-cg-lNQ"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Envoyer" id="GDc-te-Ucu">
                             <connections>
                                 <action selector="sendComment:" destination="k3t-rL-7u1" id="yFH-Ja-VK7"/>
@@ -468,7 +473,7 @@
             </objects>
             <point key="canvasLocation" x="-1" y="-678"/>
         </scene>
-        <!--Directory View Controller-->
+        <!--Directory View Controller - Title-->
         <scene sceneID="mu7-mv-yvd">
             <objects>
                 <tableViewController storyboardIdentifier="DirectoryViewController" id="xZN-cK-yA7" customClass="ETSDirectoryViewController" sceneMemberID="viewController">
@@ -477,7 +482,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Rechercher" id="E9g-kg-JpW">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
@@ -486,7 +491,7 @@
                         </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ContactIdentifier" textLabel="5gL-bL-WYk" style="IBUITableViewCellStyleDefault" id="OMI-Ls-FyX">
-                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OMI-Ls-FyX" id="Fxr-88-bYU">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -515,6 +520,14 @@
                             <outlet property="delegate" destination="xZN-cK-yA7" id="x91-FX-mnx"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="imJ-hj-N2h">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="Ugb-Pd-qvd">
+                            <connections>
+                                <action selector="panLeftMenu:" destination="xZN-cK-yA7" id="dO7-2b-g33"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="searchDisplayController" destination="nwq-0X-ua0" id="5Nu-K0-BBl"/>
                     </connections>
@@ -943,7 +956,7 @@ http://applets.etsmtl.ca</string>
             </objects>
             <point key="canvasLocation" x="458" y="837"/>
         </scene>
-        <!--Bandwidth View Controller-->
+        <!--Bandwidth View Controller - Title-->
         <scene sceneID="Zcj-oU-pyc">
             <objects>
                 <tableViewController storyboardIdentifier="BandwidthViewController" id="Dqs-Y1-i9q" customClass="ETSBandwidthViewController" sceneMemberID="viewController">
@@ -1070,9 +1083,15 @@ http://applets.etsmtl.ca</string>
                         </connections>
                     </tableView>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Title" id="AsY-os-jIZ">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="uX2-is-sqY">
+                            <connections>
+                                <action selector="panLeftMenu:" destination="Dqs-Y1-i9q" id="O9Q-El-cWx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="6gB-FF-FuQ">
                         <autoresizingMask key="autoresizingMask"/>
@@ -1420,6 +1439,11 @@ http://applets.etsmtl.ca</string>
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Nouvelles" id="mFY-3n-Uhd">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="Hnf-up-lc3">
+                            <connections>
+                                <action selector="panLeftMenu:" destination="lz9-DU-0Fb" id="kyI-y8-A1v"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Sources" id="mRq-cK-Rgw">
                             <connections>
                                 <segue destination="Mmq-HF-Scu" kind="push" identifier="SourcesSegue" id="Fpv-gH-Ipn"/>
@@ -1600,6 +1624,11 @@ http://applets.etsmtl.ca</string>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Title" id="5da-Kz-usl">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="jnV-6x-oqe">
+                            <connections>
+                                <action selector="panLeftMenu:" destination="Dlf-Hn-LBA" id="wvX-aP-oeT"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Déconnexion" id="6Oh-s1-ioH">
                             <connections>
                                 <action selector="logout:" destination="Dlf-Hn-LBA" id="zrA-T0-aYr"/>
