--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -805,62 +805,81 @@
             </objects>
             <point key="canvasLocation" x="1294" y="-2983"/>
         </scene>
-        <!--Web View View Controller-->
-        <scene sceneID="kCB-hW-O53">
+        <!--Web View View Controller - Bibliothèque-->
+        <scene sceneID="y6B-h0-1u4">
             <objects>
-                <viewController storyboardIdentifier="WebViewController" id="pBp-do-NzA" customClass="ETSWebViewViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewController" title="Bibliothèque" id="NxR-56-9fe" customClass="ETSWebViewViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="K9h-sM-wUd"/>
-                        <viewControllerLayoutGuide type="bottom" id="1ic-QU-xj7"/>
+                        <viewControllerLayoutGuide type="top" id="aVZ-qP-MLq"/>
+                        <viewControllerLayoutGuide type="bottom" id="al1-LZ-Wr7"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="1PD-wm-nc2" customClass="UIWebView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <view key="view" contentMode="scaleToFill" id="A4g-pk-g6V">
+                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SDN-1O-yxz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <connections>
-                            <outlet property="delegate" destination="pBp-do-NzA" id="4rO-fn-SNz"/>
-                        </connections>
+                        <constraints>
+                            <constraint firstItem="SDN-1O-yxz" firstAttribute="leading" secondItem="A4g-pk-g6V" secondAttribute="leading" id="8OJ-R5-BSp"/>
+                            <constraint firstAttribute="trailing" secondItem="SDN-1O-yxz" secondAttribute="trailing" id="OHa-GE-mcf"/>
+                            <constraint firstItem="al1-LZ-Wr7" firstAttribute="top" secondItem="SDN-1O-yxz" secondAttribute="bottom" id="YYI-Cj-RDm"/>
+                            <constraint firstItem="SDN-1O-yxz" firstAttribute="top" secondItem="aVZ-qP-MLq" secondAttribute="bottom" id="alS-CS-7qq"/>
+                        </constraints>
                     </view>
                     <toolbarItems>
-                        <barButtonItem title="Précédent" id="iRo-88-4iQ">
-                            <color key="tintColor" red="0.79215693473815918" green="0.12156863510608673" blue="0.090196080505847931" alpha="1" colorSpace="deviceRGB"/>
+                        <barButtonItem title="Précédent" id="TJZ-yJ-y3g">
+                            <color key="tintColor" red="0.79215693470000004" green="0.1215686351" blue="0.090196080509999998" alpha="1" colorSpace="deviceRGB"/>
                             <connections>
-                                <action selector="goBack" destination="1PD-wm-nc2" id="ffW-a1-maM"/>
+                                <action selector="goBack" destination="SDN-1O-yxz" id="7QB-we-bdi"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Jhb-Fq-kMS"/>
-                        <barButtonItem title="Suivant" id="U8n-sS-Cce">
-                            <color key="tintColor" red="0.74509803919999995" green="0.0" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="1yZ-6s-elX"/>
+                        <barButtonItem title="Suivant" id="Jr2-ae-9q6">
+                            <color key="tintColor" red="0.79215693470000004" green="0.1215686351" blue="0.090196080509999998" alpha="1" colorSpace="deviceRGB"/>
                             <connections>
-                                <action selector="goForward" destination="1PD-wm-nc2" id="xs2-V9-EIZ"/>
+                                <action selector="goForward" destination="SDN-1O-yxz" id="IIj-AP-eve"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="9Wu-rK-sMd"/>
-                        <barButtonItem systemItem="refresh" id="mfZ-YO-w6G">
-                            <color key="tintColor" red="0.74509803919999995" green="0.0" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="KlE-Ee-RBe"/>
+                        <barButtonItem systemItem="refresh" id="EjT-jv-hVf">
+                            <color key="tintColor" red="0.79215693470000004" green="0.1215686351" blue="0.090196080509999998" alpha="1" colorSpace="deviceRGB"/>
                             <connections>
-                                <action selector="reload" destination="1PD-wm-nc2" id="EXy-4P-Tcj"/>
+                                <action selector="reload" destination="SDN-1O-yxz" id="E4L-O3-Boe"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="7jQ-LL-AYE"/>
-                        <barButtonItem systemItem="stop" id="0WK-4T-PF2">
-                            <color key="tintColor" red="0.74509803919999995" green="0.0" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="X0n-wg-mXf"/>
+                        <barButtonItem systemItem="stop" id="x7a-HP-OrX">
+                            <color key="tintColor" red="0.79215693470000004" green="0.1215686351" blue="0.090196080509999998" alpha="1" colorSpace="deviceRGB"/>
                             <connections>
-                                <action selector="stopLoading" destination="1PD-wm-nc2" id="ZaH-4W-941"/>
+                                <action selector="stopLoading" destination="SDN-1O-yxz" id="NKg-aE-tgV"/>
                             </connections>
                         </barButtonItem>
                     </toolbarItems>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationItem key="navigationItem" title="Bibliothèque" id="zJb-Od-dKy">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="fjy-Vr-1AP">
+                            <connections>
+                                <action selector="panLeftMenu:" destination="NxR-56-9fe" id="uV5-sg-G4F"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
                     <connections>
-                        <outlet property="backBarButtonItem" destination="iRo-88-4iQ" id="j11-oP-Htm"/>
-                        <outlet property="nextBarButtonItem" destination="U8n-sS-Cce" id="xjR-2W-9Jm"/>
-                        <outlet property="refreshBarButtonItem" destination="mfZ-YO-w6G" id="gEY-fw-KEL"/>
-                        <outlet property="stopBarButtonItem" destination="0WK-4T-PF2" id="MzD-ZW-GOJ"/>
+                        <outlet property="backBarButtonItem" destination="TJZ-yJ-y3g" id="J54-RG-oOz"/>
+                        <outlet property="nextBarButtonItem" destination="Jr2-ae-9q6" id="csP-bY-zVh"/>
+                        <outlet property="refreshBarButtonItem" destination="EjT-jv-hVf" id="iA7-uN-5Xz"/>
+                        <outlet property="stopBarButtonItem" destination="x7a-HP-OrX" id="ZQ0-i4-Eve"/>
+                        <outlet property="webView" destination="SDN-1O-yxz" id="AeZ-Y6-4Q9"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="593-bZ-A86" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O6s-cR-hCH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1029" y="-2271"/>
+            <point key="canvasLocation" x="926" y="-2313"/>
         </scene>
         <!--Sponsors View Controller - Partenaires-->
         <scene sceneID="L7F-yo-uym">
